compiler/fir/analysis-tests/testData/resolveWithStdlib/incorrectDeprecation.kt
// ISSUE: KT-58282

<!NON_MEMBER_FUNCTION_NO_BODY!>@Deprecated(<!ANONYMOUS_FUNCTION_WITH_NAME!>fun box() = <!DEPRECATION, FUNCTION_CALL_EXPECTED!>foo<!><!>)
fun foo()<!>
